Now supporting the retrievment of old text.

--- a/TODO
+++ b/TODO
@@ -1,5 +1,8 @@
+insert smileys via javascript?
+modify text in form via javascript?
+
 add more tests
 split up initialize and webapp parts
 cleanup code ... use one db with 2 tables
-new field for comments maybe of blog entries and date entry for posts ...
-fancier layout of entries etc...
+new field for comments maybe? ...
+fancier layout of entries? etc...
