--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 insert smileys via javascript?
 modify text in form via javascript?
+user add/password modify possibility!
+show login status on all pages? not only on blog site?
 
 add more tests
 split up initialize and webapp parts
