--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+use global hash with smileys ... and introduce subs emoticonize and unemoticionize ...
 make sure only logged in users can delete their own posts (can be done by: if session('user') == author where article_id = params->article_id (additional add delete/edit for comments) -> show new page like /Blog/deletion_denied or: set_flash (deletion denied) and redirect to /Blog better. make sure if article is deleted then also all comments can be deleted from comments table
 
 user add/password modify possibility required!
