--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 use global hash with smileys ... and introduce subs emoticonize and unemoticionize ...
-make sure only logged in users can delete their own posts (can be done by: if session('user') == author where article_id = params->article_id (additional add delete/edit for comments) -> show new page like /Blog/deletion_denied or: set_flash (deletion denied) and redirect to /Blog better. make sure if article is deleted then also all comments can be deleted from comments table
+add delete/edit/ for comments too -> set_flash (deletion denied) and redirect to /Blog if its not own comment. make sure if article is deleted then also all comments can be deleted from comments table savely
 
 user add/password modify possibility required!
 dont insert images in database, instead only insert :) and :( and when parsing entries replace it, the same can be done when edit is needed, that is read from database insert it into database without images (only one route /Blog needs to do replacement and edit does not to reverse replace the images to :) and :( !!!)
