--- a/TODO
+++ b/TODO
@@ -4,13 +4,14 @@
 if session('user') == admin => true: can do anything since admin, use this check in subroutines
 use ssl / https for page with lighttpd 
 add more perl tests
+cleanup directory (databases and schemata)
 
 ##############
 ### middle ###
 ##############
 user add/password modify possibility => send email with perl to my email adress for request (+captcha usage)
-show only 50 entries, and then make links to access more items.
-use one db with 3 tables (tables: auth, comments, entries)
+show only 50 entries, and then make links to access more items. -> important
+use one db with 3 tables (tables: auth, comments, entries) -> also important
 
 ###########
 ### low ###
