--- a/TODO
+++ b/TODO
@@ -1,6 +1,8 @@
 ############
 ### high ###
 ############
+verify if  existing user cannot be re-added for that: user add/password modify possibility => send email with perl to my email adress for request (+captcha usage) - additionally insert email addresses into auth table users maybe?/maybe use roles for more security
+
 use ssl / https for page with lighttpd 
 split up initialize db and webapp parts?
 cleanup directory (databases and schemata)
@@ -8,7 +10,6 @@ cleanup directory (databases and schemata)
 ##############
 ### middle ###
 ##############
-user add/password modify possibility => send email with perl to my email adress for request (+captcha usage)
 show only 50 entries, and then make links to access more items.
 use one db with 3 tables (tables: auth, comments, entries) 
 
