--- a/TODO
+++ b/TODO
@@ -1,8 +1,9 @@
 ############
 ### high ###
 ############
+add table entry for email adress -> then we can store user email when user is created ...
+
 verify if  existing user cannot be re-added for that: user add/password modify possibility => send email with perl to my email adress for request (+captcha usage) - additionally insert email addresses into auth table users maybe?/maybe use roles for more security
--> Login / Register (if using managment user can request new password or add new user) either he needs to input mail or only username depending if email is saved in table
 
 use ssl / https for page with lighttpd 
 split up initialize db and webapp parts?
@@ -13,7 +14,6 @@ cleanup directory (databases and schemata)
 ##############
 show only 50 entries, and then make links to access more items.
 use one db with 3 tables (tables: auth, comments, entries) 
-add table entry for email adress
 
 ###########
 ### low ###
