--- a/TODO
+++ b/TODO
@@ -3,17 +3,17 @@
 ############
 use javascript insert for about text in userpages/throughout the page.
 layout improvements of webpage in general
-
-split up initialize db and webapp parts?
 imrove crosslinkining within the webpage too! (i. e. useradd, users who are available, login/logout, etc...)
+
+split up initialize db and webapp parts? for security reasons
 cleanup directory (databases and schemata to be consistent)
 cleanup code in general
 
 ##############
 ### middle ###
 ##############
-more perl tests
-show only 50 entries, and then make links to access more items.
+more perl tests to be added
+show only 50 entries, and then make links to access more items of blog.
 
 use one db with 3 tables (tables: auth, comments, entries) 
 smiley copyright issues maybe? check that ...
