--- a/TODO
+++ b/TODO
@@ -5,22 +5,21 @@ use javascript insert for about text in userpages/throughout the page.
 layout improvements of webpage in general
 imrove crosslinkining within the webpage too! (i. e. useradd, users who are available, login/logout, etc...)
 
-split up initialize db and webapp parts? for security reasons
 cleanup directory (databases and schemata to be consistent)
 cleanup code in general
 
 ##############
 ### middle ###
 ##############
+use one db with 3 tables (tables: auth, comments, entries) 
+split up initialize db and webapp parts? for security reasons
 more perl tests to be added
 show only 50 entries, and then make links to access more items of blog.
-
-use one db with 3 tables (tables: auth, comments, entries) 
-smiley copyright issues maybe? check that ...
 
 ###########
 ### low ###
 ###########
-user communication? (send message to users?, that is use a new table 'mailbox' message_from_user as foreign key, text, message_to_user from 'auth' as foreign key, and select all comments in mailbox of the current user 'my_user' from the mailbox table with the foreign key then)->add page which lists all availale users, too
+more smileys / copyright smileys?
 using db roles for security purposes?
 use ssl / https for page with lighttpd 
+user communication? (send message to users?, that is use a new table 'mailbox' message_from_user as foreign key, text, message_to_user from 'auth' as foreign key, and select all comments in mailbox of the current user 'my_user' from the mailbox table with the foreign key then)->add page which lists all availale users, too
