--- a/TODO
+++ b/TODO
@@ -5,7 +5,7 @@ add datum to comments / edit comments posts (therefore date string in table comm
 
 layout improvements of webpage in general
 imrove crosslinkining within the webpage too! (i. e. useradd, users who are available, login/logout, etc...)
-(cleanup code in general)
+(cleanup code in general, cleanup even more directories)
 
 ##############
 ### middle ###
