--- a/TODO
+++ b/TODO
@@ -3,7 +3,7 @@
 ############
 layout improvements of webpage in general
 imrove crosslinkining within the webpage too! (i. e. useradd, users who are available, login/logout, etc...)
-(cleanup code in general, cleanup even more directories)
+cleanup code even more and directories
 
 add datum to comments / edit comments posts (therefore date string in table comments necessary and update the add_comment/edit_comment form to insert also a date in the table!!!) -> update last update comment 
 
