Added mailbox for users. Now users can send messages to each other if logged in.

--- a/TODO
+++ b/TODO
@@ -1,16 +1,18 @@
 ############
 ### high ###
 ############
+user communication? (send message to users?, that is use a new table 'mailbox' message_from_user as foreign key, text, message_to_user from 'auth' as foreign key, and select all comments in mailbox of the current user 'my_user' from the mailbox table with the foreign key then)->add page which lists all availale users, too (insert smileys, date too and order message by ID ... -> insert action REPLY and DELETE) -> fix CSS layout please ...  additionally think about how one can notice the user that they have new messages (maybe via email notification since email was supplied into the database when registering was done?)
+
+more perl tests to be added for existing code ...
+
 imrove crosslinkining within the webpage (one point: show  users who are available ... list them (under Users on the userpages.tt template => i. e. only if logged in!!))
-
-more perl tests to be added
-show only 50 entries, and then make links to access more items of blog. / maybe implement the possibility to sort different the entries. lets say /Blog/entry_order/date and /Blog/entry_order/date_rev -> also we have /Blog/entry_order/50 or /Blog/entry_order/100
-
-add datum to comments / edit comments posts (therefore date string in table comments necessary and update the add_comment/edit_comment form to insert also a date in the table!!!) -> update last update comment 
 
 ##############
 ### middle ###
 ##############
+add datum to comments / edit comments posts (therefore date string in table comments necessary and update the add_comment/edit_comment form to insert also a date in the table!!!) -> update last update comment 
+show only 50 entries, and then make links to access more items of blog. / maybe implement the possibility to sort different the entries. lets say /Blog/entry_order/date and /Blog/entry_order/date_rev -> also we have /Blog/entry_order/50 or /Blog/entry_order/100
+
 cleanup code even more and directories
 layout improvements of webpage in general
 
@@ -19,5 +21,4 @@ layout improvements of webpage in general
 ###########
 more smileys / copyright smileys?
 using db roles for security purposes?
-use ssl / https for page with lighttpd 
-user communication? (send message to users?, that is use a new table 'mailbox' message_from_user as foreign key, text, message_to_user from 'auth' as foreign key, and select all comments in mailbox of the current user 'my_user' from the mailbox table with the foreign key then)->add page which lists all availale users, too
+use ssl / https for page with lighttpd
