--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 ############
 ### high ###
 ############
-user notifications: insert smileys, date (for notification of new messages) too and order message by ID && insert action REPLY and DELETE) 
+user notifications: insert smileys, date (for notification of new messages) too and order message by ID && set somehow read state (use is_read table entry)
 -> fix CSS layout please ... additionally think about how one can notice the user that they have new messages (maybe via email notification since email was supplied into the database when registering was done?)
 
 more perl tests to be added for existing code 
