--- a/TODO
+++ b/TODO
@@ -3,6 +3,7 @@
 ############
 user notifications: insert smileys, date (for notification of new messages via email?) too and order message by ID && set somehow read state (use is_read table entry)
 -> fix CSS layout please ... additionally think about how one can notice the user that they have new messages (maybe via email notification since email was supplied into the database when registering was done?)
+use TRANSACTIONS 
 
 more perl tests to be added for existing code 
 imrove crosslinkining within the webpage
@@ -22,4 +23,4 @@ layout improvements of webpage in general
 more smileys / copyright smileys?
 using db roles for security purposes?
 use ssl / https for page with lighttpd
-
+use folders for messaging
