--- a/TODO
+++ b/TODO
@@ -3,7 +3,7 @@
 ############
 user notifications: insert smileys, date (for notification of new messages via email?) too and order message by ID && set somehow read state (use is_read table entry)
 -> fix CSS layout please ... additionally think about how one can notice the user that they have new messages (maybe via email notification since email was supplied into the database when registering was done?)
-use TRANSACTIONS 
+use TRANSACTIONS maybe => disconnect from DB savely in lib/MyApp.pm
 
 more perl tests to be added for existing code 
 imrove crosslinkining within the webpage
